--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop07/cop07-1/cop07-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop07/cop07-1/cop07-1.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 <div class="sixteen wide column">
-  <h2 class="ui header">แผนการตรวจปฏิบัติการประจำปี</h2>
+  <h2 class="ui header">แผนการตรวจปฏิบัติการ</h2>
 
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>ระบุเงื่อนไขในการค้นหา</span>
